# oflike-metal

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  COMPLETION_REPORT.md  FIXPLANS.md  PROMPT.md  README.md  RELEASE_NOTES.md  launcher.sh  open_xcode.sh  project.yml  ralph.yml  run_build.sh
.agent/: scratchpad.md
apps/ApiValidation/: .gitignore  CMakeLists.txt  README.md  project.yml
apps/AutoXcodeGenTest/: CMakeLists.txt  README.md  project.yml
apps/AutoXcodeGenTest2/: CMakeLists.txt  README.md  project.yml
apps/AutoXcodeGenTest3/: CMakeLists.txt  README.md  project.yml
apps/AutoXcodeGenTest4/: CMakeLists.txt  README.md  project.yml
apps/AutoXcodeGenTest4/resources/: Info.plist
apps/AutoXcodeGenTest4/src/: App.swift  AutoXcodeGenTest4.cpp  AutoXcodeGenTest4.h
apps/SampleApp/: CMakeLists.txt  README.md  project.yml
apps/Test5/: .gitignore  CMakeLists.txt  README.md  (+1 more)
apps/test14/: CMakeLists.txt  project.yml
apps/test14/src/: Test14.cpp  Test14.h
apps/test14/test14.xcodeproj/: project.pbxproj
apps/test14/test14.xcodeproj/xcshareddata/xcschemes/: test14.xcscheme
apps/test15/: CMakeLists.txt  project.yml
apps/test15/src/: Test15.cpp  Test15.h
apps/test15/test15.xcodeproj/: project.pbxproj
apps/test15/test15.xcodeproj/xcshareddata/xcschemes/: test15.xcscheme
docs/: ARCHITECTURE.md  ARCHITECTURE2.md  BATCHING_OPTIMIZATION.md  CHECKLIST.md  FEATURE_IDEAS.md  IMPLEMENTATION.md  INDEX.md  JAPANESE_FONT_TEST.md  MIGRATION.md  PROJECT_STRUCTURE.md  SHADER_OPTIMIZATION.md  THIRDPARTY.md  VALIDATION_TESTS.md
examples/: CMakeLists.txt  README.md  basic_app.cpp  test_japanese_font.cpp
examples/00_basic/: main.cpp
examples/01_basics/: README.md  main.cpp  main.mm
examples/01_basics/01_basics.xcodeproj/: project.pbxproj
examples/01_basics/01_basics.xcodeproj/project.xcworkspace/xcuserdata/rhizomacbookproretina30.xcuserdatad/: UserInterfaceState.xcuserstate
examples/01_basics/01_basics.xcodeproj/xcuserdata/rhizomacbookproretina30.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/01_particles/: main.cpp
examples/02_polylines/: main.cpp
examples/02_shapes/: README.md  main.cpp
examples/03_color/: README.md  main.cpp
examples/03_image/: main.cpp
examples/04_image/: README.md  main.cpp
examples/04_typography/: main.cpp
examples/05_3d_primitives/: main.cpp
examples/05_typography/: README.md  main.cpp
examples/06_3d_primitives/: README.md  main.cpp
examples/06_graphics/: main.cpp
examples/07_camera/: README.md  main.cpp
examples/07_color/: main.cpp
examples/08_lighting/: README.md  main.cpp
examples/08_polygon/: main.cpp
examples/09_lines/: main.cpp
examples/09_mesh/: README.md  main.cpp
examples/10_blending/: main.cpp
examples/10_fbo/: README.md  main.cpp
examples/11_events/: README.md  main.cpp
examples/12_easycam/: README.md  main.cpp
examples/13_osc_sender/: README.md  main.cpp
examples/14_osc_receiver/: README.md  main.cpp
examples/15_gui_basic/: README.md  main.cpp
examples/16_gui_groups/: README.md  main.cpp
examples/16_xml_settings/: README.md  main.cpp
examples/17_svg_loader/: README.md  main.cpp
examples/17_tcp_client/: README.md  main.cpp
examples/18_tcp_server/: README.md  main.cpp
examples/19_osc_parameter_sync/: README.md  main.cpp
examples/19_udp_sender/: README.md  main.cpp
examples/20_udp_receiver/: README.md  main.cpp
examples/21_face_detection/: README.md  main.cpp
examples/22_sharp_basic/: README.md  main.mm
examples/23_sharp_scene/: README.md  main.mm
examples/24_sharp_video_export/: README.md  main.mm
examples/25_sharp_realtime_camera/: README.md  main.mm
examples/26_neural_classify/: README.md  main.mm
examples/28_vbo_mesh/: project.yml
examples/28_vbo_mesh/src/: App.swift  TestVboMesh.h  TestVboMesh.mm
examples/29_graphics_primitives/: CMakeLists.txt
examples/29_graphics_primitives/src/: Test13.cpp  Test13.h
examples/30_image_handling/src/: App.swift
examples/32_lighting_systems/: CMakeLists.txt  project.yml
examples/32_lighting_systems/resources/: Info.plist
examples/33_phase1_features/: project.yml
examples/33_phase1_features/src/: App.swift
examples/34_phase2_rendering/: project.yml
examples/34_phase2_rendering/resources/: Info.plist
examples/34_phase2_rendering/src/: PerformanceMonitor.swift  TestPhase2.cpp
examples/35_phase3_media/src/: TestPhase3.h
examples/36_phase4_advanced/src/: App.swift  MetalView.swift  TestPhase4.cpp
examples/validation_performance/: .gitignore  README.md  project.yml
examples/validation_performance/src/: App.swift  PerformanceTestApp.cpp  PerformanceTestApp.h
examples/validation_swiftui/: .gitignore  README.md  project.yml
examples/validation_swiftui/src/: App.swift  ValidationApp.cpp  ValidationApp.h
oflike-metal.xcodeproj/: project.pbxproj
resources/: Info.plist
scripts/: build_app.sh  create_example.sh  install_metal_toolchain_symlink.sh  new_and_run.sh  replace_xcode_metal_stub.sh  run_app.sh  run_project_wizard.sh
shaders/: Basic2D.metal  Basic3D.metal  BlendModes.metal  Common.h  GaussianSort.metal  GaussianSplatting.metal  Lighting.metal  TestShader.metal  Textured.metal
tests/: CMakeLists.txt  README.md  test_batching.cpp  test_buffer_pool.mm
tests/math/: math_test.cpp
tests/performance/: performance_test.cpp
tests/rendering/: rendering_test.cpp
tools/: projectGenerator.py
tools/project_generator/: Cargo.toml  README.md  oflike-gen.sh
tools/project_generator/TESTTEST/TESTTEST.xcodeproj/project.xcworkspace/xcuserdata/rhizomacbookproretina30.xcuserdatad/: UserInterfaceState.xcuserstate
tools/project_generator/src/: config.rs  error.rs  main.rs  utils.rs
tools/project_generator/src/commands/: add_addon.rs  init.rs  list_addons.rs  mod.rs  new.rs  remove_addon.rs  validate.rs
tools/project_generator/templates/: .gitignore.template  App.swift.template  CMakeLists.txt.template  Info.plist.template  README.md  README.md.template  main.mm.template  ofApp.cpp.template  ofApp.h.template  project.yml.template
unused/: APIFIXPLANS.md
(+389 files in other folders)
