[package]
name = "oflike-gen"
version = "1.0.0"
edition = "2021"
authors = ["daito-lab"]
description = "Project generator for oflike-metal"
license = "MIT"

[[bin]]
name = "oflike-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
